--- a/app-megasena/src/main/res/layout/activity_main.xml
+++ b/app-megasena/src/main/res/layout/activity_main.xml
@@ -10,26 +10,52 @@
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="@string/sorte" />
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:text="@string/sorte"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
-    <TextView
-        android:id="@+id/sorteio"
-        android:text="@string/sorteio"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_below="@+id/label"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="17dp"
-        android:layout_alignParentEnd="true"
-        android:textSize="30sp"
-        android:textAlignment="center"
-        android:textStyle="normal|bold" />
-
-    <Button
+    <LinearLayout
+        android:id="@+id/panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sorteio"
-        android:text="@string/btn_sortear"
-        android:onClick="sortear" />
+        android:layout_below="@id/label"
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingRight="10sp"
+            android:paddingLeft="10sp"
+            android:gravity="center"
+            android:text="@string/jogos" />
+
+        <TextView
+            android:id="@+id/tv_jogos"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/sorteios" />
+
+        <SeekBar
+            android:id="@+id/sb_jogos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:progress="@integer/sorteios"
+            android:max="@integer/total" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_sortear"
+            android:onClick="sortear" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/panel" />
 </RelativeLayout>
