--- a/app-megasena/src/main/res/layout-land/activity_main.xml
+++ b/app-megasena/src/main/res/layout-land/activity_main.xml
@@ -1,6 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:id="@+id/panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingRight="10sp"
+            android:paddingLeft="10sp"
+            android:gravity="center"
+            android:text="@string/jogos" />
+
+        <TextView
+            android:id="@+id/tv_jogos"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/sorteios" />
+
+        <SeekBar
+            android:id="@+id/sb_jogos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:progress="@integer/sorteios"
+            android:max="@integer/total" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_sortear"
+            android:onClick="sortear" />
+    </LinearLayout>
 </LinearLayout>
