--- a/app/src/main/res/layout/animacao_view.xml
+++ b/app/src/main/res/layout/animacao_view.xml
@@ -14,7 +14,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
@@ -28,5 +28,42 @@
             android:layout_height="wrap_content"
             android:text="@string/rotacionar02"
             android:onClick="rotacionar02" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/zoom01"
+            android:onClick="zoom01" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/zoom02"
+            android:onClick="zoom02" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fade01"
+            android:onClick="fade01" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fade02"
+            android:onClick="fade02" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hyperspace"
+            android:onClick="hyperspace" />
     </LinearLayout>
 </LinearLayout>
