--- a/app/src/main/res/layout/mensagem_nova_view.xml
+++ b/app/src/main/res/layout/mensagem_nova_view.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:ems="@integer/normal"
         android:inputType="text"
-        android:hint="@string/carro_nome" />
+        android:hint="@string/mensagem_nome" />
 
     <EditText
         android:id="@+id/mensagem_corpo"
@@ -19,7 +19,7 @@
         android:gravity="top"
         android:ems="@integer/normal"
         android:inputType="textMultiLine"
-        android:hint="@string/carro_descricao" />
+        android:hint="@string/mensagem_corpo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/carro_limpar"
+            android:text="@string/mensagem_limpar"
             android:onClick="limpar" />
 
         <Button
