--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -87,6 +87,12 @@
             android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/btn_aula_21"
+            android:text="@string/aula21"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
             android:id="@+id/btn_aula_22"
             android:text="@string/aula22"
             android:layout_width="match_parent"
